feat: advanced responsivity

--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
 									</div>
 
 									<!-- Nav Buttons -->
-									<div class="absolute bottom-4 px-4">
+									<div
+										class="w-full flex justify-between items-center absolute bottom-4 px-4"
+									>
 										<a
 											href="#"
 											class="text-link-primary font-semibold"
@@ -122,7 +124,7 @@
 										</a>
 										<a
 											href="#"
-											class="bg-white text-gray-900 border-4 border-gray-900 font-semibold px-6 py-2 rounded-lg transition-all focus:ring-2 focus:ring-gray-700"
+											class="bg-white text-gray-900 border-4 border-gray-900 font-semibold px-6 py-2 mr-4 rounded-lg transition-all focus:ring-2 focus:ring-gray-700"
 										>
 											Sign Up Now
 										</a>
@@ -171,13 +173,13 @@
 
 				<!-- Initial content -->
 				<section
-					class="mt-6 md:my-32 bg-white grid grid-cols-1 md:grid-cols-2"
+					class="mt-6 animate xl:my-32 bg-white grid grid-cols-1 xl:grid-cols-2"
 				>
 					<!-- Center Section -->
 					<div class="w-full flex flex-col gap-8">
 						<div>
 							<h1
-								class="text-[2.5rem] font-extrabold leading-12 md:text-7xl md:leading-20"
+								class="text-[2.5rem] font-extrabold leading-12 xltext-7xl xlleading-20"
 							>
 								<div class="relative inline-block">
 									<span
@@ -238,8 +240,8 @@
 						<div
 							class="flex flex-col gap-6 mt-12 font-normal text-gray-700 md:gap-10 md:flex-row"
 						>
-							<div class="md:w-50">
-								<p class="text-base">Trusted by leading companies</p>
+							<div class="md:w-50 w-full">
+								<p>Trusted by leading companies</p>
 							</div>
 
 							<div class="w-full flex items-center gap-12 md:px-6">
@@ -285,15 +287,15 @@
 				</section>
 
 				<section
-					class="flex w-full flex-col md:flex-row items-center my-30 bg-white"
+					class="text-scroll flex w-full flex-col xl:flex-row items-center my-30 bg-white"
 				>
 					<!-- Center Section -->
 					<div class="flex w-full flex-col gap-8 my-8">
-						<div class="w-75 md:w-2xl">
+						<div class="w-75 xl:w-2xl md:w-xl">
 							<h1
 								class="text-base font-extrabold md:text-7xl md:leading-20"
 							>
-								An app that makes it easier
+								An all-in-one app that makes it easier
 							</h1>
 						</div>
 
@@ -856,11 +858,11 @@
 					<div class="embla__cards__middle overflow-x-auto py-8">
 						<div class="embla__viewport">
 							<div class="embla__container flex gap-4">
-								<div class="embla__slide min-w-[20rem]">
+								<div class="min-w-[20rem] embla__slide">
 									<figure
-										class="flex flex-col p-8 rounded-2xl shadow-xl"
+										class="w-full flex flex-col p-8 bg-white rounded-2xl shadow-xl"
 									>
-										<blockquote class="mb-4 lg:mb-8">
+										<blockquote class="mb-4 xlmb-8">
 											<p class="my-4 font-normal md:text-xl">
 												Lacus vestibulum ultricies mi risus, duis
 												non, volutpat nullam non. Magna congue nisi
@@ -888,7 +890,7 @@
 									<figure
 										class="w-full flex flex-col p-8 bg-white rounded-2xl shadow-xl"
 									>
-										<blockquote class="mb-4 lg:mb-8">
+										<blockquote class="mb-4 xlmb-8">
 											<p class="my-4 font-normal md:text-xl">
 												Lacus vestibulum ultricies mi risus, duis
 												non, volutpat nullam non. Magna congue nisi
@@ -916,63 +918,7 @@
 									<figure
 										class="w-full flex flex-col p-8 bg-white rounded-2xl shadow-xl"
 									>
-										<blockquote class="mb-4 lg:mb-8">
-											<p class="my-4 font-normal md:text-xl">
-												Lacus vestibulum ultricies mi risus, duis
-												non, volutpat nullam non. Magna congue nisi
-												maecenas elit aliquet eu sed consectetur.
-												Vitae quis cras vitae praesent morbi
-												adipiscing purus consectetur mi.
-											</p>
-										</blockquote>
-										<figcaption class="flex items-center">
-											<img
-												class="rounded-full w-13 h-13"
-												src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/karen-nelson.png"
-												alt="profile picture"
-											/>
-											<div class="space-y-0.5 font-medium ms-3">
-												<p>Hellen Jummy</p>
-												<div class="text-sm text-gray-500">
-													Developer at Open AI
-												</div>
-											</div>
-										</figcaption>
-									</figure>
-								</div>
-								<div class="min-w-[20rem] md:max-w-auto embla__slide">
-									<figure
-										class="w-full flex flex-col p-8 bg-white rounded-2xl shadow-xl"
-									>
-										<blockquote class="mb-4 lg:mb-8">
-											<p class="my-4 font-normal md:text-xl">
-												Lacus vestibulum ultricies mi risus, duis
-												non, volutpat nullam non. Magna congue nisi
-												maecenas elit aliquet eu sed consectetur.
-												Vitae quis cras vitae praesent morbi
-												adipiscing purus consectetur mi.
-											</p>
-										</blockquote>
-										<figcaption class="flex items-center">
-											<img
-												class="rounded-full w-13 h-13"
-												src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/karen-nelson.png"
-												alt="profile picture"
-											/>
-											<div class="space-y-0.5 font-medium ms-3">
-												<p>Hellen Jummy</p>
-												<div class="text-sm text-gray-500">
-													Developer at Open AI
-												</div>
-											</div>
-										</figcaption>
-									</figure>
-								</div>
-								<div class="embla__slide min-w-[20rem]">
-									<figure
-										class="flex flex-col p-8 rounded-2xl shadow-xl"
-									>
-										<blockquote class="mb-4 lg:mb-8">
+										<blockquote class="mb-4 xlmb-8">
 											<p class="my-4 font-normal md:text-xl">
 												Lacus vestibulum ultricies mi risus, duis
 												non, volutpat nullam non. Magna congue nisi
@@ -1000,7 +946,7 @@
 									<figure
 										class="w-full flex flex-col p-8 bg-white rounded-2xl shadow-xl"
 									>
-										<blockquote class="mb-4 lg:mb-8">
+										<blockquote class="mb-4 xlmb-8">
 											<p class="my-4 font-normal md:text-xl">
 												Lacus vestibulum ultricies mi risus, duis
 												non, volutpat nullam non. Magna congue nisi
@@ -1028,147 +974,7 @@
 									<figure
 										class="w-full flex flex-col p-8 bg-white rounded-2xl shadow-xl"
 									>
-										<blockquote class="mb-4 lg:mb-8">
-											<p class="my-4 font-normal md:text-xl">
-												Lacus vestibulum ultricies mi risus, duis
-												non, volutpat nullam non. Magna congue nisi
-												maecenas elit aliquet eu sed consectetur.
-												Vitae quis cras vitae praesent morbi
-												adipiscing purus consectetur mi.
-											</p>
-										</blockquote>
-										<figcaption class="flex items-center">
-											<img
-												class="rounded-full w-13 h-13"
-												src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/karen-nelson.png"
-												alt="profile picture"
-											/>
-											<div class="space-y-0.5 font-medium ms-3">
-												<p>Hellen Jummy</p>
-												<div class="text-sm text-gray-500">
-													Developer at Open AI
-												</div>
-											</div>
-										</figcaption>
-									</figure>
-								</div>
-								<div class="min-w-[20rem] embla__slide">
-									<figure
-										class="w-full flex flex-col p-8 bg-white rounded-2xl shadow-xl"
-									>
-										<blockquote class="mb-4 lg:mb-8">
-											<p class="my-4 font-normal md:text-xl">
-												Lacus vestibulum ultricies mi risus, duis
-												non, volutpat nullam non. Magna congue nisi
-												maecenas elit aliquet eu sed consectetur.
-												Vitae quis cras vitae praesent morbi
-												adipiscing purus consectetur mi.
-											</p>
-										</blockquote>
-										<figcaption class="flex items-center">
-											<img
-												class="rounded-full w-13 h-13"
-												src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/karen-nelson.png"
-												alt="profile picture"
-											/>
-											<div class="space-y-0.5 font-medium ms-3">
-												<p>Hellen Jummy</p>
-												<div class="text-sm text-gray-500">
-													Developer at Open AI
-												</div>
-											</div>
-										</figcaption>
-									</figure>
-								</div>
-								<div class="min-w-[20rem] embla__slide">
-									<figure
-										class="w-full flex flex-col p-8 bg-white rounded-2xl shadow-xl"
-									>
-										<blockquote class="mb-4 lg:mb-8">
-											<p class="my-4 font-normal md:text-xl">
-												Lacus vestibulum ultricies mi risus, duis
-												non, volutpat nullam non. Magna congue nisi
-												maecenas elit aliquet eu sed consectetur.
-												Vitae quis cras vitae praesent morbi
-												adipiscing purus consectetur mi.
-											</p>
-										</blockquote>
-										<figcaption class="flex items-center">
-											<img
-												class="rounded-full w-13 h-13"
-												src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/karen-nelson.png"
-												alt="profile picture"
-											/>
-											<div class="space-y-0.5 font-medium ms-3">
-												<p>Hellen Jummy</p>
-												<div class="text-sm text-gray-500">
-													Developer at Open AI
-												</div>
-											</div>
-										</figcaption>
-									</figure>
-								</div>
-								<div class="min-w-[20rem] embla__slide">
-									<figure
-										class="w-full flex flex-col p-8 bg-white rounded-2xl shadow-xl"
-									>
-										<blockquote class="mb-4 lg:mb-8">
-											<p class="my-4 font-normal md:text-xl">
-												Lacus vestibulum ultricies mi risus, duis
-												non, volutpat nullam non. Magna congue nisi
-												maecenas elit aliquet eu sed consectetur.
-												Vitae quis cras vitae praesent morbi
-												adipiscing purus consectetur mi.
-											</p>
-										</blockquote>
-										<figcaption class="flex items-center">
-											<img
-												class="rounded-full w-13 h-13"
-												src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/karen-nelson.png"
-												alt="profile picture"
-											/>
-											<div class="space-y-0.5 font-medium ms-3">
-												<p>Hellen Jummy</p>
-												<div class="text-sm text-gray-500">
-													Developer at Open AI
-												</div>
-											</div>
-										</figcaption>
-									</figure>
-								</div>
-								<div class="min-w-[20rem] embla__slide">
-									<figure
-										class="w-full flex flex-col p-8 bg-white rounded-2xl shadow-xl"
-									>
-										<blockquote class="mb-4 lg:mb-8">
-											<p class="my-4 font-normal md:text-xl">
-												Lacus vestibulum ultricies mi risus, duis
-												non, volutpat nullam non. Magna congue nisi
-												maecenas elit aliquet eu sed consectetur.
-												Vitae quis cras vitae praesent morbi
-												adipiscing purus consectetur mi.
-											</p>
-										</blockquote>
-										<figcaption class="flex items-center">
-											<img
-												class="rounded-full w-13 h-13"
-												src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/karen-nelson.png"
-												alt="profile picture"
-											/>
-											<div class="space-y-0.5 font-medium ms-3">
-												<p>Hellen Jummy</p>
-												<div class="text-sm text-gray-500">
-													Developer at Open AI
-												</div>
-											</div>
-										</figcaption>
-									</figure>
-								</div>
-								<div class="min-w-[20rem] embla__slide">
-									<figure
-										class="w-full flex flex-col p-8 bg-white rounded-2xl shadow-xl"
-									>
-										<blockquote class="mb-4 lg:mb-8">
+										<blockquote class="mb-4 xlmb-8">
 											<p class="my-4 font-normal md:text-xl">
 												Lacus vestibulum ultricies mi risus, duis
 												non, volutpat nullam non. Magna congue nisi
@@ -1198,7 +1004,7 @@
 				</section>
 
 				<section
-					class="w-full md:my-38 bg-white flex flex-col md:flex-row items-center gap-4 md:gap-48"
+					class="w-full md:my-38 bg-white flex flex-col xl:flex-row items-center gap-4 md:gap-48"
 				>
 					<!-- Center Section -->
 					<div class="flex flex-col gap-8 my-8 w-full">
@@ -1424,9 +1230,9 @@
 			</section>
 
 			<!-- Footer -->
-			<div class="px-8 md:px-24 bg-gray-900">
+			<div class="px-8 w-full xl:px-24 bg-gray-900">
 				<footer class="py-12">
-					<div class="flex flex-col md:flex-row pb-10">
+					<div class="flex flex-col xl:flex-row pb-10">
 						<div class="mb-6 md:mb-0">
 							<a href="#" class="flex items-center">
 								<img
@@ -1437,7 +1243,7 @@
 							</a>
 						</div>
 
-						<div class="flex md:flex-row flex-col gap-16 md:gap-32 mt-4">
+						<div class="flex xl:flex-row flex-col gap-16 xl:gap-32 mt-4">
 							<div class="text-gray-200">
 								<div>
 									<h2 class="mb-6 font-semibold text-white">
@@ -1588,7 +1394,7 @@
 							</div>
 						</div>
 					</div>
-					<hr class="my-6 sm:mx-auto border-gray-700 lg:my-8" />
+					<hr class="my-6 sm:mx-auto border-gray-700 xlmy-8" />
 					<div
 						class="sm:flex flex-wrap sm:items-center sm:justify-between"
 					>
