--- a/index.html
+++ b/index.html
@@ -1135,8 +1135,15 @@
 
 			<!-- Last Yellow section -->
 			<section class="mt-32 bg-yellow-400 w-full">
-				<div class="p-4 md:py-24 flex flex-col md:flex-row">
-					<div class="bg-[url(/join_one.svg)]"></div>
+				<div class="p-4 md:py-24 flex flex-col items-center md:flex-row">
+					<div class="w-full">
+						<img
+							src="/join_one.svg"
+							class="min-w-full min-h-full h-full w-full"
+							alt=""
+							srcset=""
+						/>
+					</div>
 					<div class="w-full flex items-center flex-col gap-8">
 						<div>
 							<h3
@@ -1160,7 +1167,14 @@
 							</a>
 						</div>
 					</div>
-					<div class="bg-[url(/join_two.svg)]"></div>
+					<div class="w-full">
+						<img
+							src="/join_two.svg"
+							class="min-w-full w-full min-h-full h-full"
+							alt=""
+							srcset=""
+						/>
+					</div>
 				</div>
 			</section>
 
