ref: improve responsivity

--- a/index.html
+++ b/index.html
@@ -508,10 +508,10 @@
 				<section
 					class="my-32 flex flex-col-reverse md:flex-row items-center justify-center md:gap-16"
 				>
-					<div>
+					<div class="md:w-full">
 						<img
 							src="/col.png"
-							class="aspect-square max-w-full w-full object-cover"
+							class="aspect-square max-w-full w-full h-full object-cover"
 							alt="Columns"
 							srcset=""
 						/>
@@ -519,7 +519,7 @@
 
 					<!-- Center Section -->
 					<div class="flex flex-col gap-8 my-8">
-						<div class="w-full">
+						<div class="">
 							<h1
 								class="text-[2rem] font-extrabold leading-12 md:text-7xl md:leading-20"
 							>
