feat: improve SEO

--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<meta name="description" content="Teach students worldwide" />
+		<meta name="robots" content="index, follow" />
+		<link rel="canonical" href="https://seusite.com/seo-tags" />
+		<meta property="og:title" content="uTeach" />
+		<meta property="og:description" content="Teach students worldwide" />
+		<meta property="og:image" content="/vite.svg" />
+		<meta name="twitter:card" content="/vite.svg" />
+		<meta name="twitter:title" content="uTeach" />
+		<meta name="twitter:image" content="/vite.svg" />
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "Guide",
+				"name": "Guia de SEO 2025",
+				"description": "Técnicas avançadas de otimização para motores de busca."
+			}
+		</script>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
 			rel="stylesheet"
