ref: improve SEO

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<meta name="description" content="Teach students worldwide" />
 		<meta name="robots" content="index, follow" />
-		<link rel="canonical" href="https://seusite.com/seo-tags" />
+		<link rel="canonical" href="http://localhost:4173" />
 		<meta property="og:title" content="uTeach" />
 		<meta property="og:description" content="Teach students worldwide" />
 		<meta property="og:image" content="/vite.svg" />
