ref: improve SEO

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			{
 				"@context": "https://schema.org",
 				"@type": "Guide",
-				"name": "Guia de SEO 2025",
-				"description": "Técnicas avançadas de otimização para motores de busca."
+				"name": "uTeach",
+				"description": "Teach students worldwide"
 			}
 		</script>
 		<link
